-----------------------------------------
| + added   - removed   * fixed/changed |
-----------------------------------------

2.0
---
*Removed a debug putlog that was spamming
 the partyline on showinfo requests.

2.0b6
-----
*Fix summary parsing broke by tvrage format
 change.
*Fix bug causing multiline announce theme
 settings to not work as expected.
*Change geturl calls to use formatQuery instead
 of custom sanitize proc.
+Add error message that is displayed when there
 is an error get show info.
*Change showinfo geturl calls to asynchronous
 calls.
*Change schedule caching geturl calls to
 asynchronous calls.
+Add endedyear, endedmonth, and endedday 
 options for show info.
+Add ability to do "not exists" conditionals
 in templates.
+Add check for non-existent keys when
 parsing conditional elements.
+Add after loops in handlers to handler 
 situation where a required variable has not
 been set yet.

2.0b5
-----
*Fixed bug introduced in 2.0b4 which caused
 schedule lines to be built improperly.
*Fixed bug causing changes to scheduleTimeFormat
 to cause script to error out.
 
2.0b4
-----
*Fixed error in the way schedule lines were
 built which prevented a newline being used
 as a seperator.

2.0b3
-----
*Changed excludedNetworks variable name to
 filteredNetworks.
+Added includeOnlyFiltered setting to change
 the behavior have the filteredNetworks list.

2.0b2
-----
*Fixed several bugs related to custom triggers.

2.0b1
-----
+Preliminary custom trigger support.  See Custom
 Triggers section of README for more information.

1.4
---
*Changed the way time since latest/until next episode
 is calculated to handle shows that air multiple
 times a week.
*Updated URLs used in tvrage.conf.defaults to reflect
the new URLs.

1.3
---
*Fixed long standing memory leak. (hopefully)
-Removed old debug statement that slipped through the 
 cracks.
*Fix bug in convertToSxEp method causing season to
 be used for episode number.
*Fixed showinfo failing when airtime was unknown.
